--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
-    "is": "^3.3.0"
+    "is": "^3.3.0",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-jest": "^23.0.4",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "jest-junit": "^9.0.0",
     "knex": "^0.20.8",
     "npm-run-all": "^4.1.5",
